:shirt: Adding linting and prettier to front-end

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -20,6 +20,13 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": [
+    ".eslintrc.cjs",
+    "src",
+    "src/*",
+    "src/**/*",
+    "src/**/**/*",
+    "src/**/**/**/*",
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
